[package]
name = "create-ncl-app"
version = "0.1.0"
authors = [
	"Samantha Nguyen, <contact@samanthanguyen.me>",
]
description = "A CLI tool by Neoncitylights to quickly create a new project"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
# keywords = []
# categories = []
exclude = [
	".devcontainer",
	".github",
	".vscode",
	".idea",
	"deny.toml",
	".commitlintrc.json",
	"package.json",
	"package-lock.json",
	"fuzz",
	"book",
	"benches",
]

[[bin]]
name = "create-ncl-app"
path = "src/main.rs"
